--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "bcrypt": "^5.0.1",
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "knex": "^0.21.20",
+    "knex": "^0.95.11",
     "pg": "^8.7.1"
   },
   "devDependencies": {
